[package]
name = "rotcipher"
version = "0.1.0"
edition = "2021"
description = "ROT Cipher implementation in rust, rot1 to rot25"
readme = "README.md"
repository = "https://github.com/Autist69420/rotcipher-rs"
keywords = ["crypto", "rot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
